Fix stick to Java 8 baseline